<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Happy Dice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="peter_pan">Peter Pan</string>
    <string name="_900">900</string>
    <string name="score"> điểm</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="add_score">Chọn hình thức thanh toán</string>
    <string name="zingcard">Thẻ cào Zing</string>
    <string name="mobile_card">Thẻ cào điện thoại</string>
    <string name="mobileacc">Tài khoản điện thoại</string>
    <string name="atmacc">Tài khoản ATM nội địa</string>
    <string name="hotline">"Hotline: "</string>
    <string name="_1900_561_558">1900 561 558</string>
    <string name="zalo_acc">Tài khoản ví Zalo</string>
    <string name="title_activity_zing_card">ZingCardActivity</string>
    <string name="billno">Mã đơn hàng</string>
    <string name="lk_mbc48374652">lk_MBC48374652</string>
    <string name="billinfo">Thông tin đơn hàng</string>
    <string name="billdes">Nạp điểm cho tài khoản Peter Pan</string>
    <string name="provider_info">Thông tin nhà cung cấp</string>
    <string name="provider_name">Happy Dice (VNG Corp)</string>
    <string name="cardcode">Mật mã của thẻ, vd: AVB170804</string>
    <string name="cardseri">Số seri, vd: 55260393160720</string>
    <string name="card_info">Thông tin thẻ</string>
    <string name="ok">Đồng ý</string>
    <string name="mobi">mobi</string>
    <string name="vina">vina</string>
    <string name="viettel">viettel</string>
    <string name="price_lev">Mức giá</string>
    <string name="lev_15_000_">15.000</string>
    <string name="amount_unit"><u>đ</u></string>
    <string name="user_phone">Thông tin thuê bao điện thoại</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="processing">Đang xử lý</string>
    <string name="success">Thành công</string>
   	<string name="unsuccess">Thất bại</string>
   	<string name="notification">Thông báo</string>
   	<string name="close">Đóng</string>
   	<string name="otp">Mã xác nhận</string>
   	<string name="otp_note">"Tin nhắn chứa mã xác nhận đã được gửi đến số điện thoại "</string>
   	<string name="otp_note_atm">"Tin nhắn chứa mã xác nhận đã được gửi đi "</string>
   	<string name="pay_info">Thông tin thanh toán</string>
   	<string name="pay_money">Số tiền cần nạp</string>
   	<string name="select_bank">Chọn ngân hàng</string>
   	<string name="atm_card_holder_name">Tên chủ thẻ</string>
   	<string name="atm_card_holder_name_ex">VD: Nguyễn Văn A</string>
   	<string name="atm_card_code">Mã số thẻ</string>
   	<string name="atm_card_ex">VD: 9704000000000000</string>
   	<string name="atm_card_publish_date">Ngày phát hành:</string>
   	<string name="_01_20">01/20 </string>
   	<string name="card_password">Mật mã thẻ</string>
   	<string name="card_password_ex">******</string>
   	<string name="input_captchar">Nhập chuỗi kí tự bảo mật bên trên</string>
   	<string name="slash">/</string>
   	<string name="month">tháng</string>
   	<string name="year">năm</string>
   	<string name="add_1000">Nạp 1.000 điểm</string>
   	<string name="add_20000">Nạp 20.000 điểm</string>
   	<string name="add_24000">Nạp 24.000 điểm</string>
</resources>
