<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:background="@drawable/border00" >

        <ImageView
            android:id="@+id/exit_ctl"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_margin="10dip"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_close" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:height="40dip"
            android:text="@string/app_name"
            android:textColor="#00a1ff"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/border01"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/avatar_ctl"
            android:layout_width="84dip"
            android:layout_height="84dip"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="84dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/avatar_ctl"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_ctl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingTop="15dip"
                android:text="@string/peter_pan" />

            <TextView
                android:id="@+id/score_ctl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/name_ctl"
                android:paddingTop="16dip"
                android:text="@string/_900" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_ctl"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@id/score_ctl"
                android:paddingTop="16dip"
                android:text="@string/score" />

            <ImageView
                android:id="@+id/plus_ctl"
                android:layout_width="46dip"
                android:layout_height="46dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:padding="14dip"
                android:src="@drawable/plus" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/add_1000"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_1000" />

    <Button
        android:id="@+id/add_20000"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_20000" />

    <Button
        android:id="@+id/add_24000"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_24000" />

</LinearLayout>